<resources>
    <string name="app_name">Atlys_Assesment</string>
    <string name="invoices">Invoices</string>
    <string name="no_invoices">No Invoices</string>
    <string name="invoices_smallCase">invoices</string>
    <string name="_new">New</string>
    <string name="filter">Filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hash">#</string>
    <string name="pounds_symbol">£</string>
    <string name="description">Create an invoice by clicking the <b>New</b> button and get started</string>
    <string name="heading">There is nothing here</string>
    <string name="go_back">Go back</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_paid">Mark as Paid</string>
    <string name="payment_due">Payment Due</string>
    <string name="sent_to">Sent to</string>
    <string name="amount_due">Amount Due</string>
    <string name="loading_the_invoices">Loading the invoices.</string>
    <string name="new_invoice">New Invoice</string>
    <string name="bill_from">Bill From</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="postcode">PostCode</string>
    <string name="country">Country</string>
    <string name="bill_to">Bill To</string>
    <string name="client_s_name">Client\'s Name</string>
    <string name="client_s_email">Client\'s Email</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="payment_terms">Payment Terms</string>
    <string name="project_description">Project Description</string>
    <string name="item_list">Item List</string>
    <string name="item_name">Item Name</string>
    <string name="item_qty">Qty.</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="add_new_invoice">+Add New Item</string>
    <string name="save_as_send">Save</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="save_changes">Save Changes</string>
    <string name="filter_by_status">Filter by Status</string>
    <string name="select_invoice_status_from_below">Select invoice status from below.</string>
    <string name="clear_filter">Clear Filter</string>
</resources>