<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/secondary_light"
    app:cardElevation="@dimen/elevation0dp"
    app:cardCornerRadius="@dimen/cornerRadius10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_deletion"
            style="@style/H2"
            android:paddingTop="@dimen/padding10dp"
            android:paddingStart="@dimen/padding10dp"
            android:paddingEnd="@dimen/padding10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deleteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:padding="@dimen/padding10dp"
            style="@style/Body2"
            android:textColor="@color/dark_grey"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height60dp"
            style="@style/Button_Delete"
            android:text="@string/delete"
            android:layout_below="@id/deleteDescription"
            android:layout_alignParentEnd="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Button_Save_Draft"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height60dp"
            android:layout_below="@id/deleteDescription"
            android:layout_marginEnd="@dimen/margin10dp"
            android:layout_toStartOf="@id/deleteButton"
            android:text="@string/cancel" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>